# file-secret

./: Cargo.toml  README.md
examples/: first_command.bat  second_command.bat  tutorial.bat
src/: errors.rs  files.rs  main.rs
